start button added

--- a/android/AccidentPrevention/app/src/main/res/layout/content_main.xml
+++ b/android/AccidentPrevention/app/src/main/res/layout/content_main.xml
@@ -15,5 +15,17 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="Click to start your safe journey"
+        android:id="@+id/textView"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:id="@+id/start"
+        android:layout_below="@+id/textView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="152dp"
+        android:text="Start Journey" />
 </RelativeLayout>
