--- a/android/AccidentPrevention/app/src/main/res/layout/locationtry.xml
+++ b/android/AccidentPrevention/app/src/main/res/layout/locationtry.xml
@@ -13,17 +13,31 @@
             android:id="@+id/toolbar_location"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
+            android:background="#00FFFF"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
-<TextView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/tv_locationtry_location"
-    android:text="text"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="Location"/>
+<TextView
+    android:layout_width="match_parent"
+    android:textAlignment="center"
+    android:layout_height="wrap_content"
+    android:textSize="30sp"
+    android:id="@+id/tv_locationtry_location"
+    android:text="text"
+    android:paddingBottom="10dp"
+    />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Warning incidents"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textSize="24sp"
         android:id="@+id/tv_locationtry_accident"/>
 </LinearLayout>
